# biotrackr

./: Changelog.md  README.md  pyproject.toml
src/biotrackr/: cli.py  models.py
src/biotrackr/config/: base.yaml
src/biotrackr/core/: digest.py  fetch_bioconductor_release.py  fetch_github.py  fetch_papers.py
src/biotrackr/templates/: report.html.j2
