[project]
name = "biotrackr"
version = "0.1.0"
description = "This package is used to get updates on bio-related papers and softwares."
authors = [
    {name = "Matteo Miotto", email = "miotsdata@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "Jinja2>=3.1.6",
    "platformdirs>=4.5.0",
    "sqlalchemy>=2.0.44",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

keywords = ["biology", "data-analysis", "CLI", "reporting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Knowledge :: Bioinformatics",
]

keywords = ["Bioinformatics", "Releases", "News", "Papers", "Publications"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
include = ["src/biotrackr/templates/**", "src/biotrackr/config/**"]


[project.scripts]
biotrackr = "biotrackr.cli:main"

[project.urls]
Homepage = "https://github.com/miotsdata/biotrackr"
Issues =  "https://github.com/miotsdata/biotrackr/issues"
